# ai-agents

./: README.md  agent-supervisor.ipynb  pyproject.toml
.ipynb_checkpoints/: agent-supervisor-checkpoint.ipynb
agno-agent/: main.py  movie-script-agent.py  pyproject.toml
browser-agents/: main.py  pyproject.toml
browser-agents/browser_agents.egg-info/: PKG-INFO  SOURCES.txt
simple-agent/: .env  README.md  main.py  pyproject.toml
simple-agent/src/: agent-with-tools.py  agent.py  agno-agent.py
simple-chatbot/: .env  main.py  pyproject.toml
simple-chatbot/src/: tools.py
