[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno[aws]>=1.5.5",
    "browser-use>=0.2.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.18",
    "langgraph-supervisor>=0.0.27",
    "langgraph-swarm>=0.0.11",
    "notebook>=7.4.3",
]

[tool.uv.workspace]
members = [
    "browser-agents",
]
